riscritto parser per sensordDump, cambiato formato timestamp back to float, rimane solo problema visualizzazione a consolle